Names in the tables

--- a/secs/5-sat_detect/5-unconstrained_results.tex
+++ b/secs/5-sat_detect/5-unconstrained_results.tex
@@ -56,10 +56,10 @@ which result in similar time responses of the cross-sensitivity error across dif
         \begin{tabular}{l c c}
                 \hline \hline
                 Test & $T_w$ (FTIR)     & $T_w$ ($NO_x$) \\ \hline
-                $ dg\_hftp\_1 $ & 2.95 & 2.72\\
-                $ dg\_hftp\_2 $ & 13.13 & 8.81\\
-                $ dg\_hftp\_3 $ & 0.000 & 0.000\\
-                $ aged\_hftp\ $ & 164.14 & 165.33\\
+                DG Hot FTP 1 & 2.95 & 2.72\\
+                DG Hot FTP 2 & 13.13 & 8.81\\
+                DG Hot FTP 3 & 0.000 & 0.000\\
+                Aged Hot FTP & 164.14 & 165.33\\
                 \hline \hline
         \end{tabular}
 \end{table}
@@ -70,10 +70,10 @@ which result in similar time responses of the cross-sensitivity error across dif
         \begin{tabular}{l c c}
                 \hline \hline
                 Test & $T_w$ (FTIR)     & $T_w$ ($NO_x$) \\ \hline
-                $dg\_rmc\_1$ & 42.55 & 34.11\\
-                $dg\_rmc\_2$ & 0.000 & 0.000\\
-                $dg\_rmc\_3$ & 30.11 & 28.67\\
-                $aged\_rmc $ & 119.61 & 111.56\\
+                DG RMC 1 & 42.55 & 34.11\\
+                DG RMC 2 & 0.000 & 0.000\\
+                DG RMC 3 & 30.11 & 28.67\\
+                Aged RMC & 119.61 & 111.56\\
                 \hline \hline
         \end{tabular}
 \end{table}
