Prof. Meckl's corrections are pending

--- a/secs/3-governing_eqns/4-NH3_proc_dyn.tex
+++ b/secs/3-governing_eqns/4-NH3_proc_dyn.tex
@@ -19,7 +19,7 @@ Thus, the rate of change of gaseous $NH_3$ on the catalyst surface can be modell
 \subsection{Molar conservation at the scale of residence time}
 
 Similar to the ammonia adsorption/desorption process, at the end of every residence time, a fresh parcel of gaseous
-reactants enters the catalyst chamber. Thus, the molar conservation for the gaseous $NH_3$ adsorption/desorption process
+reactants enters the catalyst chamber. Thus, the molar conservation for the gaseous $NH_3$ process
 can be correlated with the inlet and outlet molar concentrations of the $NH_3$ at the beginning and the end of residence
 time. Similar to the $NO_x$ process dynamics the measurement of $NH_3$ concentration at the outlet depends only on the
 measurement of the $NH_3$ concentration at the inlet one residence time before. That is, there is no integrating effect
