--- a/secs/5-sat_detect/3-testcell_aging.tex
+++ b/secs/5-sat_detect/3-testcell_aging.tex
@@ -33,7 +33,7 @@ consistency across repeated tests on the same catalyst under similar test condit
 sensitivity error $\varepsilon_{\chi}(T)$ introduces bias in the parameter estimates as part of the error that has the
 same temperature dependence as the model structure enters into the parameter estimates. Thus, the linear programming problem estimated the parameters with an added bias term as shown below:
 \begin{align}
-    \varepsilon_{\chi}(T) &= \phi_{sat}(T(k))^T \theta_{\varepsilon_{\chi}} + \epsilon_{\chi}\\
+    \varepsilon_{\chi}(T) &= \phi_{sat}(T(k))^T \theta_{\varepsilon_{\chi}} + \Delta \varepsilon_{\chi}\\
     J(\theta_{sat})
                     &= \sum_{k=0}^{N-1} \lr{ \phi^T(k) \lr{\theta_{sat} + \theta_{\varepsilon_{\chi}}} - \eta (k) }
 \end{align}
