Let, and Where, corrections and few spelling errors

--- a/secs/1-intro/subs/1-2_cstr.tex
+++ b/secs/1-intro/subs/1-2_cstr.tex
@@ -38,7 +38,7 @@ limitations.
 \end{figure}
 
 The model development is based on specific assumptions that reflect typical operating conditions and system behavior.
-The CSTR assumption underpins the construction of the reaction flow model for SCR reactions. Drawing on reduced order
+The CSTR assumption underpins the construction of the reaction flow model for SCR reactions. Drawing on reduced-order
 modelling results from previous studies, including \cite{devarakonda2008adequacy,jain2023diagnostics}, the
 number of reactions considered is reduced from the full set to three (Table~\ref{tab::react_rates}). The analysis
 focuses exclusively on the standard SCR reaction, with the assumption that all $NO_x$ in the exhaust gas is $NO$, since
