--- a/secs/2-data/1-res_time.tex
+++ b/secs/2-data/1-res_time.tex
@@ -8,7 +8,7 @@ residence time ($\tau_{mode}$) can be approximated by the formula:
 \begin{align}
         \tau_{mode} = \frac{\rho V_{scr}}{F_{mode}}
 \end{align}
-where, $\rho$ is the density of the exhaust gas, $V_{scr}$ is the volume of the SCR-ASC chamber, and $F_{mode}$ is the
+where $\rho$ is the density of the exhaust gas, $V_{scr}$ is the volume of the SCR-ASC chamber, and $F_{mode}$ is the
 mode of the mass flow rate of the exhaust gas. We have the dimensions of the SCR-ASC chamber tabulated in
 Table~\ref{tab::scr_asc_dimensions} \cite{jain2023model}.
 \begin{table}[!ht]
