--- a/secs/2-data/2-data_units.tex
+++ b/secs/2-data/2-data_units.tex
@@ -24,7 +24,7 @@ pressure. Using the ideal gas law:
     \rho &= \frac{PM}{R T} = \frac{\mu}{T}
 \end{align}
 \begin{align*}
-    \text{where, } &\\
+    \text{where } &\\
     P &= \text{Pressure of the exhaust gas (ambient pressure)} = 101.325 \: kPa\\
     M &= \text{Molecular weight of the exhaust gas} = 28.9652 \: g/mol\\
     T &= \text{Temperature of the exhaust gas in Kelvin}\\
@@ -42,7 +42,7 @@ In general the operating temperature is very high ($250 \,^\circ C \approx 500 K
 \end{align}
 %%==================
 \subsubsection{Sensitivity of density to change in $NO_x$ concentrations}
-Let, $P_{NO_x}$ be the partial pressure of $NO_x$ and $P_0$ be the total pressure. Assuming the rest of the gas constituents are similar to that of air, we have the density as:
+Let $P_{NO_x}$ be the partial pressure of $NO_x$ and $P_0$ be the total pressure. Assuming the rest of the gas constituents are similar to that of air, we have the density as:
 \begin{align*}
     \rho &= \frac{1}{RT} \lr{ P_{NO_x} M_{NO_x} + (P_0 - P_{NO_x}) M_{air}} = \frac{1}{RT} \lr{ P_{NO_x} \lr{M_{NO_x} - M_{air}} + P_0 M_{air}}\\
     \implies \frac{\partial \rho}{\partial P_{NO_x}} &= \frac{1}{RT} \lr{\lr{M_{NO_x} - M_{air}}}\\
@@ -86,7 +86,7 @@ value as the volume of 1 mole of air changes with temperature. Assuming ideal ga
     \label{eqn::V_air}
 \end{align}
 %===
-where, $V_0, T_0$ are the volume and temperature of one mole of air under STP conditions. From literature,
+where $V_0, T_0$ are the volume and temperature of one mole of air under STP conditions. From literature,
 $V_0 = 22.4 L = 22.4 \times 10^{-3} m^3$ and $T_0 = 273.15 K$.
 %===
 \begin{align*}
