--- a/secs/3-governing_eqns/1-reactions.tex
+++ b/secs/3-governing_eqns/1-reactions.tex
@@ -85,7 +85,7 @@ available data. From linear model fitting, the validity of the linear model was 
 Using second-order Taylor series approximation, the expression for rate constant can be rewritten as:
 \begin{align*}
     k(T) &\approx k(T_0) + k'(T_0) (T - T_0) + \frac{1}{2} k''(T_0) (T - T_0)^2\\
-    \text{Let,} \qquad
+    \text{Let} \qquad
     &m + 2qT_0 = k'(T_0) = \lr{\frac{AE}{RT_0^2}} e^{-\frac{E}{RT_0}} \\
     &2 q = k''(T_0) = \lr{\frac{A E^2}{R^2 T_0^4} - \frac{A E}{2 R T_0^3}} e^{-\frac{E}{RT_0}} \\
     \implies k(T) &\approx k(T_0) + \lr{m + 2qT_0} (T - T_0) + q (T - T_0)^2
