--- a/secs/3-governing_eqns/2-1-sig_approx.tex
+++ b/secs/3-governing_eqns/2-1-sig_approx.tex
@@ -3,7 +3,7 @@
 
 The average surface concentration $\sigma(k)$ in the sample time is approximated as the surface concentration at the
 beginning of the sample time. This approximation will introduce an error in the model whose effects will be analyzed in
-sequential sections. Thus,
+subsequent sections. Thus,
 \begin{align}
     \Omega(k) &\approx n \tau \lr{\Gamma \gamma_{ads} (k) - \con{NH_3}^{ads}(k) \gamma_{des} (k)}
 \end{align}
@@ -43,7 +43,7 @@ then,
         &- n \tau k_{scr} \con{NO_x}^{in}(k) \sigma(k)
 \end{align*}
 
-as, $n\tau = t_s$ is a constant for the process, the above equation can be rewritten as:
+as $n\tau = t_s$ is a constant for the process, the above equation can be rewritten as:
 \begin{align*}
     \sigma(k + 1) =& \sigma(k)\\
         &+ t_s k_{ads} \con{NH_3}^{in} (k) \lr{\Gamma - \sigma(k)} \\
