--- a/secs/3-governing_eqns/5-urea_dosing_proc_dyn.tex
+++ b/secs/3-governing_eqns/5-urea_dosing_proc_dyn.tex
@@ -45,7 +45,7 @@ of urea dosing process as:
 \begin{align}
     \con{NH_3}^{in}(k) &= \nu_u \frac{u_{inj}}{F}    \label{eqn::urea_inj_dyn}
 \end{align}
-where,
+where
 \begin{align*}
     \nu_u &= 2 r_u t_s \rho_0\\
     T_{min} &\leq T \leq T_{max}\\
