--- a/secs/3-governing_eqns/6-proc_dyn.tex
+++ b/secs/3-governing_eqns/6-proc_dyn.tex
@@ -27,7 +27,7 @@ From previous derivations, we have the complete process dynamics of SCR-ASC dyna
                          & \quad - t_s \lr{k_{oxi} + k_{des}} \sigma(k) - t_s k_{scr} \con{NO_x}^{in}(k) \sigma(k)
                 \label{eqn::sigma_process}\\
         \sigma(k) &= g_{sat} \lr{\sigma^{ub}(k)}  \label{eqn::sigma_sat}\\
-        \text{where, }\qquad & \notag \\
+        \text{where }\qquad & \notag \\
         g_{sat} (\sigma) &= \begin{cases}
         \sigma & \text{if } 0 \leq \sigma \leq \Gamma \\
         \Gamma & \text{if } \sigma > \Gamma \\
