--- a/secs/4-NOx_mdl/1-subs/change_in_nox_model.tex
+++ b/secs/4-NOx_mdl/1-subs/change_in_nox_model.tex
@@ -28,7 +28,7 @@ writing the above equation for $\sigma(k)$:
                         -  t_s k_{od}(k-1)}
                         \\ + \Gamma(k-1) t_s k_{ads}(k-1) \con{NH_3}^{in}(k-1)
 \end{multline*}
-Let,
+Let
 \begin{align}
         \gamma_{proc}(k-1) &= \lrf{1 -  t_s k_{ads}(k-1) \con{NH_3}^{in}(k-1)
                         -  t_s k_{scr}(k-1) u_1(k-1)
