--- a/secs/4-NOx_mdl/1-subs/parametrization.tex
+++ b/secs/4-NOx_mdl/1-subs/parametrization.tex
@@ -54,7 +54,7 @@ Thus, we have the parametric form of the $NO_x$ reduction dynamics:
                     - \phi^T_{\eta}(k) \theta_{\eta}  +  \phi_{\Gamma}^T(k)  \theta_{\Gamma}
         \label{eqn::eta_parm}
 \end{align}
-where,
+where
 
 \begin{minipage}{0.49\textwidth}
         \begin{align}
