--- a/secs/4-NOx_mdl/2_catalyst_saturation.tex
+++ b/secs/4-NOx_mdl/2_catalyst_saturation.tex
@@ -56,7 +56,7 @@ Similarly, the second case can be parametrized using the same set of approximati
         &= \lrf{\lrb{\frac{u_1(k)}{F(k)}} \phi_2^T(k) } \lrf{\Gamma \tau_0 k_{s2v} \theta_{scr}}
 \end{align*}
 \begin{align}
-        Let, \qquad  \Gamma \tau_0 k_{s2v} \theta_{scr} &= \theta_{sat}\\
+        Let \qquad  \Gamma \tau_0 k_{s2v} \theta_{scr} &= \theta_{sat}\\
         \lrf{\tau(k) k_{s2v} k_{scr}(k) u_1(k)} \Gamma  &=
         \lrb{\frac{u_1(k)}{F(k)}} \phi_2^T(k)  \theta_{sat} = \phi^T_{sat} \theta_{sat}
         \label{eqn::gamma_scr}
@@ -64,7 +64,7 @@ Similarly, the second case can be parametrized using the same set of approximati
 %===
 The conditions for case switching can also be parametrized using the same expressions as (\ref{eqn::sigma_ub_param}) and (\ref{eqn::gamma_scr}) by multiplying both sides of the inequalities by $\lrf{\tau(k) k_{s2v} k_{scr}(k) u_1(k)} (>0)$, which is always positive.
 
-Let,
+Let
 \begin{align}
         f_{\sigma}(k) &= \eta(k) \lrb{\frac{u_1(k)}{F(k)}} \lrb{\frac{F(k-1)}{u_1(k-1)}}
         +\lrb{\frac{u_1(k)}{F(k)}} \phi_{NO_x}^T \theta_{NO_x}\\
