--- a/secs/5-sat_detect/0-sat_detect.tex
+++ b/secs/5-sat_detect/0-sat_detect.tex
@@ -31,7 +31,7 @@ Incorporating equations (\ref{eqn::residence_time_mdl}) and (\ref{eqn::gamma}) i
     \phi_{sat} (k) &= \frac{u_1(k)}{F(k)} \underbrace{\bm{2\lr{\frac{T-T_0}{T_r}}^2-1 & \frac{T-T_0}{T_r} & 1}}_{\phi_2(T)}
     \label{eqn::phi_def} \\
     %===
-    \text{Where, } \quad T_0 &= \frac{T_{max} + T_{min}}{2}, \quad T_r = \frac{T_{max} - T_{min}}{2} \notag
+    \text{where } \quad T_0 &= \frac{T_{max} + T_{min}}{2}, \quad T_r = \frac{T_{max} - T_{min}}{2} \notag
 \end{align}
 Rearranging the terms of equation (\ref{eqn::regression}), we get a quantity that involves the product of the rate
 constant and the surface concentration of viable voids, $k_{scr} \Gamma$, i.e.,
