--- a/secs/5-sat_detect/3_subs/2_aging_detection.tex
+++ b/secs/5-sat_detect/3_subs/2_aging_detection.tex
@@ -17,7 +17,7 @@ with a quantity that is only a function of temperature and represents the produc
 coverage. From (\ref{eqn::regression}),
 \begin{align}
         \alpha_{sat} &= \frac{F(k)}{u_1(k)} \eta_{sat}(k) = \tau_0 k_{scr}\Gamma = \phi_T^T(k)\theta_{sat}\\
-        \text{where,} \quad \phi_T^T(k) &= \bm{2\lr{\frac{T-T_0}{T_r}}^2-1 & \frac{T-T_0}{T_r} & 1}
+        \text{where} \quad \phi_T^T(k) &= \bm{2\lr{\frac{T-T_0}{T_r}}^2-1 & \frac{T-T_0}{T_r} & 1}
 \end{align}
 %===
 This quantity, $\alpha_{sat}$ can be estimated and changes with aging of the catalyst based on the hypothesis that the
