--- a/secs/5-sat_detect/6-detector_performance.tex
+++ b/secs/5-sat_detect/6-detector_performance.tex
@@ -8,7 +8,7 @@ asymptotic properties are employed. The linear programming problem (\ref{eqn::li
 of the saturated model is demonstrated to be equivalent to MLE under a half-normal distribution of the model-structure
 error between the actual system response and the saturated model prediction. For the unsaturated model, the
 least-squares problem corresponds to MLE under the Gaussian distribution of the model-structure error. Utilizing the
-parameter distributions, a Wald test-based detector (\ref{eqn::wald_statistic}) is proposed to quantify the distance
+parameter distributions, a detector based on the Wald test (\ref{eqn::wald_statistic}) is proposed to quantify the distance
 between the estimated parameters and the known degreened parameters, scaled by the Fisher information of the parameter
 estimate distribution. The influence of nuisance parameters is also considered for the unsaturated model
 (\ref{eqn::wald_nus}). The performance of the detector is evaluated using both test-cell and truck data sets.
