--- a/secs/n-conclusion/0_subs/1_contrib.tex
+++ b/secs/n-conclusion/0_subs/1_contrib.tex
@@ -9,7 +9,7 @@ The main contributions of this thesis are summarized below.
                   dynamics captured by the model are consistent with the temporal resolution of available measurements;
           \item employs linear-in-parameter approximations for physical properties such as residence time and
                   temperature-dependent rate constants, while using polynomial (Chebyshev) bases to retain a structure
-                    that is linear in parameters and numerically well conditioned; and
+                    that is linear in parameters and numerically well-conditioned; and
           \item models catalyst saturation and desaturation by introducing a switched structure, with causal switching
                   condition, that distinguishes saturated and unsaturated regimes and constrains $NO_x$ reduction
                     dynamics accordingly.
