--- a/secs/4-NOx_mdl/1_NOx_r_mdl.tex
+++ b/secs/4-NOx_mdl/1_NOx_r_mdl.tex
@@ -45,7 +45,7 @@ directly using control volume (Figure~\ref{fig::ctrl_vol}). The model derivation
                 $n-1$ which is the sampling period. This results in a telescopic cancellation of the terms resulting in
                 an equation relating the moles in the current sample to the moles in the next sample
                 (section-\ref{sec::sigma_deriv}). As the ammonia desorption and ammonia oxidation have the same effect
-                ($\sigma$ reduction) on the surface concentration of ammonia in similar fashion, the rate constants can
+                ($\sigma$ reduction) on the surface concentration of ammonia the rate constants can
                 be lumped by addition, i.e., $k_{od} = k_{oxi} + k_{des}$. We have,
                 \begin{multline}
                         \sigma(t + t_s) = \sigma(t) - \sigma(t) t_s \lrf{k_{ads}(t) \con{NH_3}^{in}(t)
@@ -56,10 +56,10 @@ directly using control volume (Figure~\ref{fig::ctrl_vol}). The model derivation
                         \label{eqn::ads_avg}
                 \end{multline}
         \item Finally, using (\ref{eqn::nox_avg}), $\sigma(t+t_s), \sigma(t)$ can be eliminated from
-                (\ref{eqn::ads_avg}) for getting a dynamic model for $NO_x$-reduction process which explicitly depends
+                (\ref{eqn::ads_avg}) to get a dynamic model for $NO_x$-reduction process which explicitly depends
                 on the measured inputs and states alone.
                 \begin{align}
-                        \text{Let, }\quad \eta(k) = u_1(k-1) - x_1(k)
+                        \text{Let }\quad \eta(k) = u_1(k-1) - x_1(k)
                 \end{align}
 \begin{align*}
         \eta(k+1) =& \eta(k) \lrb{\frac{\tau(k)}{\tau(k-1)}}
@@ -91,7 +91,7 @@ directly using control volume (Figure~\ref{fig::ctrl_vol}). The model derivation
 The above equation (\ref{eqn::disc_NOx}) is parametrized using the models for the physical properties and
 urea-dosing and used for parameter estimation and validation.
 
-Steps, 1, 2 and 3 are discussed in detail in the previous sections. The step-4 derivation is presented below followed by the parametrization.
+Steps 1, 2 and 3 are discussed in detail in the previous sections. The step-4 derivation is presented below followed by the parametrization.
 
 
 \input{./secs/4-NOx_mdl/1-subs/change_in_nox_model.tex}
