--- a/secs/4-NOx_mdl/25_switching_condition.tex
+++ b/secs/4-NOx_mdl/25_switching_condition.tex
@@ -7,7 +7,7 @@ An alternative and concise derivation of the above model provides greater insigh
                         - t_s k_{scr} u_1(k) \sigma(k)\\
         [NH_3]^{in}(k) &= \nu_0 \frac{u_2(k)}{F(k)}
 \end{align}
-Let,
+Let
 \begin{align*}
         u_{1F}(k) &= \frac{u_1(k)}{F(k)} \\
         u_{2F}(k) &= \frac{u_2(k)}{F(k)}
@@ -66,7 +66,7 @@ Parametrizing the above equation with a Chebyshev basis polynomial temperature m
         & - u_{2F}(k-1) \bar \eta_F (k) \phi_1(k-1) \theta_{\eta_{ads}} \label{eqn::t3}\\
         & - \bar \eta_F (k) \phi_1(k-1) \theta_{\eta_{od}} \label{eqn::t4}\\
         & - u_1(k-1) \bar \eta_F (k) \phi_1(k-1) \theta_{\eta_{scr}} \label{eqn::t5}\\
-        \text{where,} \qquad  & \notag\\
+        \text{where} \qquad  & \notag\\
         \phi_2(k) &= \bm{2\lr{\frac{T-T_0}{T_r}}^2-1 & \frac{T-T_0}{T_r} & 1} \notag\\
         \phi_1(k) &= \bm{\frac{T-T_0}{T_r} & 1} \notag\\
         T_r &= \frac{T_{max} - T_{min}}{2} \quad \text{and} \quad
