--- a/secs/5-sat_detect/2-param_dist.tex
+++ b/secs/5-sat_detect/2-param_dist.tex
@@ -1,5 +1,5 @@
 \section{Maximum Likelihood Estimation of the Saturated Catalyst Model Parameters}
-For a parameter estimation based hypothesis test for catalyst saturation and aging detection, both the value of the
+For a parameter-estimation-based hypothesis test for catalyst saturation and aging detection, both the value of the
 parameters that minimize the prediction error and their distribution are required. The current section, therefore,
 reformulates the parameter estimation method (\ref{eqn::optimization_prob}) for saturated catalyst model parameters in a
 statistical estimation framework. The idea behind the parameter estimation method is rooted in the idea that for a given time step, maximum $NO_x$ reduction happens when the catalyst is saturated. Thus,
